--- a/src/app/user/sign-up/signup/signup.component.scss
+++ b/src/app/user/sign-up/signup/signup.component.scss
@@ -12,7 +12,7 @@ div.router-wrapper {
         width: 100%;
         overflow-y: auto;
         @include respond-down($sm) {
-            overflow-y: unset;
+            overflow-y: auto;
         }
     }
 }
