--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: $middle-grey;
     overflow-y: auto;
     overflow-x: hidden;
